# MobuFaceMotion

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: OpenReality.cmake
docs/: building.md  protocols.md
src/device_faceMotion/: CMakeLists.txt  blendshape_driver.cxx  blendshape_driver.h  device_faceMotion.cxx  device_faceMotion_device.cxx  device_faceMotion_device.h  device_faceMotion_hardware.cxx  device_faceMotion_hardware.h  device_faceMotion_layout.cxx  device_faceMotion_layout.h  protocol.cxx  protocol.h
tools/: install.ps1
